@@ -151,7 +151,7 @@ public enum Recyclers {
             }
 
             int slot() {
-                final long id = Thread.currentThread().getId();
+                final long id = Thread.currentThread().threadId();
                 // don't trust Thread.hashCode to have equiprobable low bits
                 int slot = (int) BitMixer.mix64(id);
                 // make positive, otherwise % may return negative numbers
