@@ -10,10 +10,12 @@ package org.opensearch.search.profile.query;
 
 import org.apache.lucene.search.Query;
 import org.opensearch.search.profile.ContextualProfileBreakdown;
+import org.opensearch.search.profile.ProfileMetric;
 import org.opensearch.search.profile.ProfileResult;
 import org.opensearch.search.profile.Timer;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
@@ -21,6 +23,8 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Function;
+import java.util.function.Supplier;
 
 /**
  * This class acts as a thread-local storage for profiling a query with concurrent execution
@@ -34,7 +38,16 @@ public final class ConcurrentQueryProfiler extends QueryProfiler {
     // one thread will access the LinkedList at a time.
     private final Map<Long, LinkedList<Timer>> threadToRewriteTimers;
 
-    public ConcurrentQueryProfiler(AbstractQueryProfileTree profileTree) {
+    private final Function<Query, Collection<Supplier<ProfileMetric>>> customPluginMetrics;
+
+    public ConcurrentQueryProfiler() {
+        this(new ConcurrentQueryProfileTree(query -> List.of()), query -> List.of());
+    }
+
+    public ConcurrentQueryProfiler(
+        AbstractQueryProfileTree profileTree,
+        Function<Query, Collection<Supplier<ProfileMetric>>> customPluginMetrics
+    ) {
         super(profileTree);
         long threadId = getCurrentThreadId();
         // We utilize LinkedHashMap to preserve the insertion order of the profiled queries
@@ -42,13 +55,14 @@ public final class ConcurrentQueryProfiler extends QueryProfiler {
         threadToProfileTree.put(threadId, (ConcurrentQueryProfileTree) profileTree);
         threadToRewriteTimers = new ConcurrentHashMap<>();
         threadToRewriteTimers.put(threadId, new LinkedList<>());
+        this.customPluginMetrics = customPluginMetrics;
     }
 
     @Override
-    public ContextualProfileBreakdown<QueryTimingType> getQueryBreakdown(Query query) {
+    public ContextualProfileBreakdown getQueryBreakdown(Query query) {
         ConcurrentQueryProfileTree profileTree = threadToProfileTree.computeIfAbsent(
             getCurrentThreadId(),
-            k -> new ConcurrentQueryProfileTree()
+            k -> new ConcurrentQueryProfileTree(customPluginMetrics)
         );
         return profileTree.getProfileBreakdown(query);
     }
@@ -81,7 +95,7 @@ public final class ConcurrentQueryProfiler extends QueryProfiler {
      */
     @Override
     public void startRewriteTime() {
-        Timer rewriteTimer = new Timer();
+        Timer rewriteTimer = new Timer("rewrite_timer");
         threadToRewriteTimers.computeIfAbsent(getCurrentThreadId(), k -> new LinkedList<>()).add(rewriteTimer);
         rewriteTimer.start();
     }
@@ -129,6 +143,6 @@ public final class ConcurrentQueryProfiler extends QueryProfiler {
     }
 
     private long getCurrentThreadId() {
-        return Thread.currentThread().getId();
+        return Thread.currentThread().threadId();
     }
 }
